--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "git-pre-push": "0.0.5",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "pre-push": "^0.1.1",
