--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "nyc --reporter=html --reporter=text mocha tests",
+    "eslint-fix": "eslint --fix src",
     "start": "node index.js"
   },
   "pre-push": [
