--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "config": "^3.2.2",
     "express": "^4.16.4",
     "express-basic-auth": "^1.2.0",
+    "markdown": "^0.5.0",
     "sqlite3": "^4.0.6",
     "sqlstring": "^2.3.1",
     "winston": "^3.2.1"
